<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration_container"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="edu.tacoma.uw.css.thuv.gethealthyapplication.authenticate.RegistrationFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_desc"
        android:src="@mipmap/get_healthy_logo_transparent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green" />

    <EditText
        android:id="@+id/text_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_user_email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/text_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sex"
        android:inputType="text" />


    <EditText
        android:id="@+id/text_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="text" />


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="129dp"
        android:layout_height="37dp"
        android:layout_gravity="end"
        android:background="#50cef8"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_dark" />

</LinearLayout>